# JITAOTCourse

./: CMakeLists.txt  README.md  main.cpp
IR/: CMakeLists.txt  irbuilder.cpp  irbuilder.hpp
IR/BasicBlock/: basicblock.cpp  basicblock.hpp
IR/DFS/: dfs.cpp  dfs.hpp  nodemarker.hpp  rpo.hpp
IR/DominatorTree/: dominatortree.cpp  dominatortree.hpp
IR/Graph/: graph.cpp  graph.hpp
IR/Instr/: datadef.hpp  dump.cpp  enums.hpp  instruction.cpp  instruction.hpp  oprdef.hpp
IR/LoopAnalyzer/: loopanalyzer.cpp  loopanalyzer.hpp
tests/: CMakeLists.txt  dominatortree.cpp  loopanalyzer.cpp
